--- a/medicine-front/src/components/Footer/Footer.css
+++ b/medicine-front/src/components/Footer/Footer.css
@@ -1,11 +1,20 @@
 .footer{
-    height: 190px;
+    min-height: 300px;
     background: #039;
     color:white;
     padding-left:100px;
     padding-right:100px;
-    line-height:20px;
     padding-top:20px;
-
     font-size:18px;
+    line-height:23px;
+
+    .line{
+        width:100%;
+        height:1px;
+        background: white;
+    }
+
+    .under_line{
+        text-align:center;
+    }
 }
