--- a/medicine-front/src/app/upload_photo/upload_photo.css
+++ b/medicine-front/src/app/upload_photo/upload_photo.css
@@ -10,74 +10,20 @@
     width:500px;
     text-align:center;
     line-height:30px;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 .download_area{
     width:700px;
-    height:200px;
-    border-color:rgb(221, 221, 221);
-    border-radius:2px;
-    border-style:solid;
-    border-width:1px;
-
-    .download_area_img{
-        font-size:50px;
-        color:blue;
-        cursor:pointer;
-    }
-
-    .download_area_title{
-
-        font-family: Arial, serif;
-        width:500px;
-        line-height:30px;
-        text-align:center;
-        font-size:16px;
-    }
-
-    .download_area_description{
-
-        text-align:center;
-        width:500px;
-        color:rgb(154, 154, 154);
-        font-family: Arial, serif;
-        font-size:14px;
-    }
+    display:block;
+    margin-left:auto !important;
+    margin-right:auto !important;
 }
 
 .download_button{
-    width:350px;
-    height:50px;
-    background: blue;
-    color:white;
-    cursor:pointer;
-    font-family: Arial, serif;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    border-radius: 10px;
-}
-
-
-
-
-
-
-.modal_form {
-    width: 100%;
-    height: 400px;
-    border-color:rgb(221, 221, 221);
-    border-style:solid;
-    border-width:1px 0;
-}
-
-.modal_buttons{
-
-
-.button{
-
-    width:100px;
-
-}
-
+    margin-left: auto;
+    margin-right: auto;
+    width:350px !important;
+    display:block;
 }
