- Уменьшено расстояние между полями в форме создания пациента - "день рождения" заменить на "дата рождения" - DatePicker локализован на русский - В форме создания пациента добавлена проверка у поля email на формат email - В кнопке “Добавить карту” вместо знака "+" сделана иконка "+" из стандартного набора иконок Ant Design - В форме удаления карты сделана зависимость доступности кнопки от нажатой галочки: пока чекбокс не активен, то кнопка не доступна - На странице пациентов добавлена кнопка для редактирования профиля врача - Доработаны стили у названия медицинской организации на странице врача - В форму удаления пациентов добавлена логика отображения имени пациента

--- a/medicine-front/src/app/patients/patients.css
+++ b/medicine-front/src/app/patients/patients.css
@@ -9,3 +9,13 @@
     cursor:pointer;
     text-align:center;
 }
+
+.medical_organization_title{
+    color:gray;
+}
+
+.medical_organization_edit_icon{
+    cursor:pointer;
+    font-size:20px;
+    color:blue !important;
+}
