- Правки по теням

--- a/medicine-front/src/app/chat/DiagnosticDrawer/DiagnosticDrawer.css
+++ b/medicine-front/src/app/chat/DiagnosticDrawer/DiagnosticDrawer.css
@@ -1,5 +1,6 @@
 .diagnostics_drawer{
     .yearDiagnostics{
+        cursor:pointer;
 
         .year{
             color: gray;
@@ -16,6 +17,14 @@
             .border{
                 font-weight:bold;
             }
+
+
+            &:hover{
+
+                box-shadow: 0 0 21px 1px rgba(34, 60, 80, 0.17)
+            }
+
+
         }
     }
 }
